Added unbeatable AI alogrithm, fixed scoreboard display, added two player module

--- a/tic-tac-toe/public/css/style.css
+++ b/tic-tac-toe/public/css/style.css
@@ -1,18 +1,19 @@
 body{
   font-family: 'Architects Daughter', cursive;
   color: #fff;
+  text-align: center;
 }
 
 #boardFrame {
   width: 410px;
   height: 420px;
   background-color: #362919;
-  margin: 10% auto;
+  margin: 5% auto 0 auto;
   border-radius: 15px;
   position: relative;
   -moz-box-shadow: 1px 2px 4px rgba(0, 0, 0,0.5);
-    -webkit-box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
-    box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+  -webkit-box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
   padding: 0;
 }
 
@@ -22,17 +23,17 @@ body{
   margin: 0 auto;
   width: 360px;
   height: 330px;
-  box-shadow: 0 -30px 50px #493C23 inset, 0 0 15px #372D1B inset;
+  box-shadow: 0 -10px 50px #493C23 inset, 0 0 15px #372D1B inset;
   position: relative;
   overflow: hidden;
 }
 
-#playerMode h1, #playerChoice h1 {
+#playMode h1, #symbolChoice h1 {
   font-size: 200%;
   margin-top: 40px;
 }
 
-#playerChoice, #playerMode {
+#symbolChoice, #playMode {
   display: block;
   position: absolute;
   right: 5px;
@@ -42,7 +43,7 @@ body{
   padding: 0;
 }
 
-#playerChoice {
+#symbolChoice {
   display: none;
 }
 
@@ -53,20 +54,37 @@ body{
   margin-top: 30px;
 }
 
+#scoreBoard {
+  margin: 0;
+  padding: 10px 0 0 0;
+  color: #B5B5B5;
+  height: 40px;
+}
+
+.score-holder {
+  display: none;  
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
 #reset {
   font-size: 16px;
-  margin: 0;
-  padding: 0; 
   color: #B5B5B5;
-  position: absolute;
-  right: 40px;
 }
-#chooseOne:hover, #chooseTwo:hover, #chooseX:hover, #chooseO:hover, #reset:hover {
+
+#chooseOne:hover, 
+#chooseTwo:hover, 
+#chooseX:hover, 
+#chooseO:hover, 
+#reset:hover,
+#playAgain:hover {
   color: #fff; 
   border-radius: 20px;
   border: 2px dashed #BBD851;
   text-decoration: none;
   cursor: pointer;
+  transition: all .10s ease-out;
 }
 
 #chooseOne:hover, #chooseTwo:hover {
@@ -80,12 +98,11 @@ body{
   display: inline;
 }
 
-#backToBasic {
+#backToBasic, #playAgain {
   display: block;
   color: #fff;
   font-size: 21px;
   margin-top:30px;
-  
 }
 
 #backToBasic:hover {
@@ -99,10 +116,24 @@ body{
   font-size: 60px;
   color: #BBD851;
   cursor: pointer;
-  width: 120px;
-  height: 110px;
   margin: 0;
   padding: 10px;
+}
+
+.dialog-box {
+  display: block;
+  width:  200px;
+  top: 50%;
+  background-color: rgba(54, 41, 25, 0.8);
+  position: absolute;
+  left: 50%;
+  margin: -100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  text-align: center;
+  border-radius: 5px;
+  color: white;
+  font-size: 2em; 
 }
 
 .middle-col {
@@ -115,19 +146,8 @@ body{
 
 #gameGrid {
   display: none;
-  margin-left: 15px;
-}
-
-#scoreBoard {
-  margin: 0;
-  padding: 10px 0 0 0;
-  color: #B5B5B5;
-  height: 50px;
-}
-.score-holder {
-  display: none;
-}
-
-.score-split {
-  border-left: 2px solid #B5B5B5;
+  width: 360px;
+  height: 330px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
 }
