--- a/tic-tac-toe/public/css/style.css
+++ b/tic-tac-toe/public/css/style.css
@@ -1,5 +1,5 @@
-body{
-  font-family: 'Architects Daughter', cursive;
+body {
+  font-family: "Architects Daughter", cursive;
   color: #fff;
   text-align: center;
 }
@@ -11,10 +11,29 @@ body{
   margin: 5% auto 0 auto;
   border-radius: 15px;
   position: relative;
-  -moz-box-shadow: 1px 2px 4px rgba(0, 0, 0,0.5);
-  -webkit-box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
-  box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+  -moz-box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);
   padding: 0;
+}
+
+#scoreBoard {
+  margin: 0;
+  padding: 10px 0 0 0;
+  color: #b5b5b5;
+  height: 40px;
+}
+
+.score-holder {
+  display: none;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#reset {
+  font-size: 16px;
+  color: #b5b5b5;
 }
 
 #boardPanel {
@@ -23,18 +42,19 @@ body{
   margin: 0 auto;
   width: 360px;
   height: 330px;
-  box-shadow: 0 -10px 50px #493C23 inset, 0 0 15px #372D1B inset;
+  box-shadow: 0 -10px 50px #493c23 inset, 0 0 15px #372d1b inset;
   position: relative;
   overflow: hidden;
 }
 
-#playMode h1, #symbolChoice h1 {
+#playMode h1,
+#symbolChoice h1 {
   font-size: 200%;
   margin-top: 40px;
 }
 
-#symbolChoice, #playMode {
-  display: block;
+#symbolChoice,
+#playMode {
   position: absolute;
   right: 5px;
   z-index: 2;
@@ -43,78 +63,69 @@ body{
   padding: 0;
 }
 
+#playMode {
+  display: block;
+}
+
 #symbolChoice {
   display: none;
 }
 
-#chooseOne, #chooseTwo, #chooseX, #chooseO {
+#chooseOne,
+#chooseTwo,
+#chooseX,
+#chooseO {
   display: block;
   color: #fff;
   font-size: 21px;
   margin-top: 30px;
 }
 
-#scoreBoard {
-  margin: 0;
-  padding: 10px 0 0 0;
-  color: #B5B5B5;
-  height: 50px;
-}
-
-.score-holder {
-  display: none;  
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-}
-
-#reset {
-  font-size: 16px;
-  color: #B5B5B5;
-}
-
-#chooseOne:hover, 
-#chooseTwo:hover, 
-#chooseX:hover, 
-#chooseO:hover, 
+#chooseOne:hover,
+#chooseTwo:hover,
+#chooseX:hover,
+#chooseO:hover,
 #reset:hover,
 #playAgain:hover {
-  color: #fff; 
+  color: #fff;
   border-radius: 20px;
-  border: 2px dashed #BBD851;
+  border: 2px dashed #bbd851;
   text-decoration: none;
   cursor: pointer;
-  transition: all .10s ease-out;
+  transition: all 0.1s ease-out;
 }
 
-#chooseOne:hover, #chooseTwo:hover {
+#chooseOne:hover,
+#chooseTwo:hover {
   width: 50%;
   margin: auto;
-  margin-top:30px;
+  margin-top: 30px;
 }
 
-#chooseX, #chooseO {
+#chooseX,
+#chooseO {
   font-size: 40px;
   display: inline;
 }
 
-#backToBasic, #playAgain {
+#backToBasic,
+#playAgain {
   display: block;
   color: #fff;
   font-size: 21px;
-  margin-top:30px;
+  margin-top: 30px;
 }
 
 #backToBasic:hover {
-  color: #CEA79B; 
+  color: #cea79b;
   text-decoration: none;
   cursor: pointer;
 }
 
-.game-box { 
-  font-family: 'Permanent Marker', cursive;
+.game-box {
+  font-family: "Permanent Marker", cursive;
   font-size: 60px;
-  color: #BBD851;
+  color: #bbd851;
   cursor: pointer;
   margin: 0;
   padding: 10px;
@@ -122,7 +133,7 @@ body{
 
 .dialog-box {
   display: block;
-  width:  200px;
+  width: 200px;
   top: 50%;
   background-color: rgba(54, 41, 25, 0.8);
   position: absolute;
@@ -133,16 +144,18 @@ body{
   text-align: center;
   border-radius: 5px;
   color: white;
-  font-size: 2em; 
+  font-size: 2em;
 }
 
 .middle-col {
   border-left: 2px solid #fff;
-  border-right: 2px solid #fff;}
+  border-right: 2px solid #fff;
+}
 
 .middle-row {
   border-top: 2px solid #fff;
-  border-bottom: 2px solid #fff;}
+  border-bottom: 2px solid #fff;
+}
 
 #gameGrid {
   display: none;
